--- a/PSUStudent.ipynb
+++ b/PSUStudent.ipynb
@@ -2,30 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\afasa\\AppData\\Local\\Temp\\ipykernel_20652\\1261751788.py:17: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Edge(PATH, options=headless)\n"
+     ]
+    }
+   ],
    "source": [
-    "# CALL Student Class\n",
+    "try:\n",
+    "    # IMPORT LIBRARY\n",
+    "    from selenium import webdriver\n",
+    "except:\n",
+    "    %pip install -r requirements.txt\n",
+    "finally:\n",
+    "    # IMPORT LIBRARY\n",
+    "    from selenium import webdriver\n",
+    "    from selenium.webdriver.common.by import By\n",
+    "    from selenium.webdriver.edge.options import Options\n",
     "\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.edge.options import Options\n",
+    "    PATH = 'msedgedriver.exe'\n",
+    "    headless = Options()\n",
+    "    headless.add_argument('--headless')\n",
     "\n",
-    "PATH = 'C:\\Program Files\\msedgedriver.exe'\n",
-    "headless = Options()\n",
-    "headless.add_argument('--headless')\n",
-    "\n",
-    "# Call Webdriver\n",
-    "driver = webdriver.Edge(PATH, options=headless)"
+    "    # Call Webdriver\n",
+    "    driver = webdriver.Edge(PATH, options=headless)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def Student_Class and Show_info\n",
+    "\n",
     "class Student:\n",
     "    def __init__(self, std_id:str, std_pswd:str):\n",
     "        ''' ID and PASSWORD for login to SIS website '''\n",
@@ -100,46 +116,49 @@
     "        else:\n",
     "            for elem in self['type']:\n",
     "                print(elem)\n",
-    "        "
+    "\n",
+    "def show_info(std:Student):\n",
+    "    for elem in std.info.items():\n",
+    "        for ele in elem:\n",
+    "            if type(ele) == dict:\n",
+    "                for e in ele.items():\n",
+    "                    print(': '.join(str(e)[1:-1].replace('\\'', '').split(',')))\n",
+    "            else: \n",
+    "                if ele == 'transcript':\n",
+    "                    break\n",
+    "                else: print(f'\\n{ele}')\n",
+    "    \n",
+    "    print('\\ntranscript')\n",
+    "    for elem in std.info['transcript']:\n",
+    "        detail = std.info['transcript'][elem]\n",
+    "        if detail.__len__ == 3:\n",
+    "            print(f'{elem}', f'{int(detail[1])}/{int(detail[2])} ชั่วโมง ({int(detail[0])} กิจกรรม)', sep=': ')\n",
+    "        else: print(f'{elem}', f'{int(detail[1])} ชั่วโมง ({int(detail[0])} กิจกรรม)', sep=': ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting ID and Password are done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "stu = Student()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Setting ID and Password are done.\n",
       "Succeed by get info\n"
      ]
     }
    ],
    "source": [
-    "stu.get_info()"
+    "## GET INFO\n",
+    "std = Student(input('Enter Student ID: '), input('Enter SIS Password: '))\n",
+    "std.get_info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -147,45 +166,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "                  info: Return general info by string\n",
-      "                  advisor: Return advisor name by string\n",
-      "                  transcript: Return general info by string\n",
-      "                  \n"
+      "my_info\n",
+      "id:  6410712071\n",
+      "fname:  อัฟฟาน กาเส็มสัน\n",
+      "branch:  การบริบาลทางเภสัชกรรม\n",
+      "faculty:  คณะเภสัชศาสตร์\n",
+      "current_degree:  ปริญญาตรี ภาคปกติ\n",
+      "\n",
+      "advisor\n",
+      "fname:  PIMPIMON TANSAKUL\n",
+      "\n",
+      "transcript\n",
+      "Y1: 13 ชั่วโมง (5 กิจกรรม)\n",
+      "Y2: 0 ชั่วโมง (0 กิจกรรม)\n",
+      "Y3: 0 ชั่วโมง (0 กิจกรรม)\n",
+      "Y4: 0 ชั่วโมง (0 กิจกรรม)\n",
+      "Optional: 55 ชั่วโมง (16 กิจกรรม)\n",
+      "SUM: 68 ชั่วโมง (21 กิจกรรม)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'my_info': {'id': '6410712071',\n",
-       "  'fname': 'อัฟฟาน กาเส็มสัน',\n",
-       "  'branch': 'การบริบาลทางเภสัชกรรม',\n",
-       "  'faculty': 'คณะเภสัชศาสตร์',\n",
-       "  'current_degree': 'ปริญญาตรี ภาคปกติ'},\n",
-       " 'advisor': {'fname': 'PIMPIMON TANSAKUL'},\n",
-       " 'transcript': {'Y1': ['5', '13', '10'],\n",
-       "  'Y2': ['0', '0', '10'],\n",
-       "  'Y3': ['0', '0', '10'],\n",
-       "  'Y4': ['0', '0', '10'],\n",
-       "  'Optional': ['16', '55', '60'],\n",
-       "  'SUM': ['21', '68']}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "stu.print()\n",
-    "stu.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "show_info(std)\n",
     "driver.quit()"
    ]
   }
